Remove comment. Update format

--- a/pandas_04a.ipynb
+++ b/pandas_04a.ipynb
@@ -7,9 +7,8 @@
    "source": [
     "---\n",
     "# Filtering\n",
-    "Using conditionals to filter rows and columns.\n",
     "\n",
-    "#TODO test out filtering in series\n",
+    "Using conditionals to filter rows and columns.\n",
     "\n",
     "---"
    ]
@@ -28,6 +27,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function for printing a horizontal line. For display purpose\n",
+    "def printhr(s: str = None, n: int = 40):\n",
+    "    \"\"\"Print a horizontal rule of the character \"=\" of length n.\n",
+    "\n",
+    "    Args:\n",
+    "        s (str, optional): Header message. Defaults to None.\n",
+    "        n (int, optional): Number of characters. Defaults to 50.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if s:\n",
+    "        print(\"=\" * int(n / 2), s, \"=\" * int(n / 2))\n",
+    "    else:\n",
+    "        print(\"=\" * n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +106,7 @@
        "2   Jane    Doe  jane@outlook.com"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +128,7 @@
    "source": [
     "---\n",
     "## Creating Filters\n",
+    "\n",
     "To create a filter, a conditional is required. This conditional compares the values from a column to another value.\n",
     "\n",
     "---"
@@ -115,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +148,7 @@
        "Name: last, dtype: bool"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,6 +176,7 @@
    "source": [
     "---\n",
     "### Creating Filters - using isin()\n",
+    "\n",
     "isin() checks all values in a column if it exists in an interable and returns a Series of bools.\n",
     "\n",
     "---"
@@ -162,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +196,7 @@
        "Name: first, dtype: bool"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,6 +216,7 @@
    "source": [
     "---\n",
     "### Creating Filters - using str.contains()\n",
+    "\n",
     "contains() is a string method that behaves almost like the opposite of isin(); in which it will check a str against all the values in a column and return a Series of bools indicating a match.  \n",
     "This is useful if cells can contain a list of values instead of just one.\n",
     "\n",
@@ -202,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +237,7 @@
        "Name: email, dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +256,7 @@
    "source": [
     "---\n",
     "## Applying Filters\n",
+    "\n",
     "Filtering in pandas work by passing in a Series of bools known as a Boolean mask or a **filter**, which we created previously into a DataFrame.\n",
     "\n",
     "---"
@@ -240,18 +264,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first last             email\n",
+       "1  John  Doe    john@gmail.com\n",
+       "2  Jane  Doe  jane@outlook.com"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first last             email\n",
+       "1  John  Doe    john@gmail.com\n",
+       "2  Jane  Doe  jane@outlook.com"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first last             email\n",
+       "1  John  Doe    john@gmail.com\n",
+       "2  Jane  Doe  jane@outlook.com"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Applying the filter using loc (preferred)\n",
     "# I prefer this since when selecting a column from the filter,\n",
     "# loc does not need to do double indexing\n",
     "# (i.e. df[filter, column] instead of df[filter][column])\n",
     "display(df.loc[my_filter1])\n",
+    "printhr()\n",
     "\n",
     "# Another way to apply filter; using index.\n",
     "display(df[my_filter1])\n",
+    "printhr()\n",
     "\n",
     "# Done in a single line:\n",
     "df[df[\"last\"] == \"Doe\"]"
@@ -259,15 +457,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "Name: last, dtype: bool"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2     True\n",
+       "Name: last, dtype: bool"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Doing it like the previous example means the filter\n",
     "# will only work on match case meaning only Doe (with capital D)\n",
     "# will be filtered in. i.e:\n",
     "my_filter2 = df[\"last\"] == \"doe\"\n",
     "display(my_filter2)\n",
+    "printhr()\n",
     "# Notice how the filter does not find any matching record.\n",
     "\n",
     "\n",
@@ -284,6 +515,7 @@
    "source": [
     "---\n",
     "## Filter using Multiple Conditions\n",
+    "\n",
     "We can filter using the character **&** for combining AND filters,  \n",
     "and **|** for combining OR filters.\n",
     "\n",
@@ -292,9 +524,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first last           email\n",
+       "1  John  Doe  john@gmail.com"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Filtering using & (And)\n",
     "\n",
@@ -307,9 +586,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first             email\n",
+       "0  Lorem   lorem@yahoo.com\n",
+       "2   Jane  jane@outlook.com"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Filtering using | (Or)\n",
     "\n",
@@ -326,6 +656,7 @@
    "source": [
     "---\n",
     "## Inversion of Filter\n",
+    "\n",
     "To get the rows that are NOT covered by the filter. That is, the inverse of our filter.  \n",
     "This is achieved by the bitwise NOT operator, tilde ( ~ ). This effectively inverses all bool in the Boolean mask.  \n",
     "i.e.  df[~filter]\n",
@@ -335,9 +666,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first   last            email\n",
+       "0  Lorem  Ipsum  lorem@yahoo.com"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## To get the rows whose last name is NOT Doe:\n",
     "\n",
