Restructure notes and new notes

--- a/pandas_06.ipynb
+++ b/pandas_06.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "---\n",
     "# Add/Remove Rows and Columns\n",
+    "\n",
     "Adding and removing rows and columns from DataFrames\n",
     "\n",
     "---"
@@ -126,6 +127,18 @@
    "source": [
     "---\n",
     "## Adding New Columns\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Add Columns by Indexing\n",
+    " \n",
     "You can add a new column to an existing DataFrame by indexing to it (the name it will have) and assigning data to it (in the following example, the data is a Series).\n",
     "\n",
     "---"
@@ -280,7 +293,6 @@
    ],
    "source": [
     "# Add a new column that combines the first and last name\n",
-    "\n",
     "display(df)\n",
     "printhr()\n",
     "\n",
@@ -298,8 +310,194 @@
    "metadata": {},
    "source": [
     "---\n",
+    "### Add Columns Using .concat()\n",
+    "\n",
+    "To add columns to Series and DataFrames, we can use the `concat()` function. `concat()` allows concatenation of pandas objects along an axis.\n",
+    "\n",
+    "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.  \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>Lorem Ipsum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>John Doe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first   last             email    full_name\n",
+       "0  Lorem  Ipsum   lorem@yahoo.com  Lorem Ipsum\n",
+       "1   John    Doe    john@gmail.com     John Doe\n",
+       "2   Jane    Doe  jane@outlook.com     Jane Doe"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    7\n",
+       "1    8\n",
+       "2    9\n",
+       "Name: C, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C\n",
+       "0  1  4  7\n",
+       "1  2  5  8\n",
+       "2  3  6  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_c = pd.DataFrame({\"A\": [1, 2, 3], \"B\": [4, 5, 6]})\n",
+    "display(df)\n",
+    "printhr()\n",
+    "\n",
+    "# New column (Series) to add\n",
+    "new_column = pd.Series([7, 8, 9], name=\"C\")\n",
+    "display(new_column)\n",
+    "printhr()\n",
+    "\n",
+    "# Add new column using concat\n",
+    "df_new = pd.concat([df_c, new_column], axis=1)\n",
+    "display(df_new)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## Removing Columns\n",
+    "\n",
     "Removing a column can be done by the `drop()` method.  \n",
+    "\n",
     "`drop()` can remove a Series (row or column, determined by the **axis** parameter) by passing in the label(s) of the Series to the **labels** parameter.  \n",
     "\n",
     "**axis** can be set to 0, \"rows\", or \"index\" to remove a row Series, and set to 1, or \"columns\" to remove a column Series. **axis** defaults to 0 (rows Series).  \n",
@@ -313,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1245,8 @@
    "source": [
     "---\n",
     "## Adding Rows\n",
-    "To add rows to Series and DataFrames, we can use the `concat()` function. `concat()`\n",
+    "\n",
+    "To add rows to Series and DataFrames, we can use the `concat()` function. `concat()` allows concatenation of pandas objects along an axis.\n",
     "\n",
     "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.  \n",
     "\n",
@@ -1055,8 +1254,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Add Row Using .concat()\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1175,6 +1385,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1257,9 +1474,12 @@
     "        \"first\": \"Ken\",\n",
     "        \"last\": \"Adams\",\n",
     "        \"email\": \"adams@gmail.com\",\n",
-    "    }, index=[0]\n",
+    "    },\n",
+    "    index=[0],\n",
     ")\n",
+    "\n",
     "display(new_row)\n",
+    "printhr()\n",
     "\n",
     "df = pd.concat([df, new_row], ignore_index=True)\n",
     "display(df)"
@@ -1267,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1330,6 +1550,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
     },
     {
      "data": {
@@ -1437,17 +1664,18 @@
     "# Original df\n",
     "df2 = pd.DataFrame({\"a\": [1], \"b\": [2]})\n",
     "display(df2)\n",
-    "\n",
     "printhr()\n",
+    "\n",
     "# df to be added as row\n",
     "new_row = pd.Series({\"a\": 3, \"b\": 4})\n",
-    "\n",
     "display(new_row)\n",
+    "printhr()\n",
+    "\n",
     "# Convert Series to df and transpose (swap rows with columns)\n",
     "new_row = new_row.to_frame().T\n",
     "display(new_row)\n",
-    "\n",
     "printhr()\n",
+    "\n",
     "# Concat new row to existing df\n",
     "df2 = pd.concat([df2, new_row], ignore_index=True)\n",
     "display(df2)"
@@ -1459,7 +1687,270 @@
    "metadata": {},
    "source": [
     "---\n",
+    "### Add Row Using .loc[]\n",
+    "\n",
+    "You can add a row by indexing into a new (unique) index and assigning a valid entry to it. If the index is not new, the row will be replaced.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b\n",
+       "0  1  2\n",
+       "1  3  4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================   Collection (list-like)   ====================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b\n",
+       "0  1  2\n",
+       "1  3  4\n",
+       "2  5  6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================   Series   ====================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "a    7\n",
+       "b    8\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b\n",
+       "0  1  2\n",
+       "1  3  4\n",
+       "2  5  6\n",
+       "3  7  8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df2)\n",
+    "\n",
+    "# Using list-like data\n",
+    "printhr(\"  Collection (list-like)  \")\n",
+    "new_row = [5, 6]\n",
+    "df2.loc[2] = new_row\n",
+    "\n",
+    "display(new_row)\n",
+    "display(df2)\n",
+    "\n",
+    "\n",
+    "# Using series\n",
+    "printhr(\"  Series  \")\n",
+    "new_row = pd.Series({\"a\": 7, \"b\": 8})\n",
+    "df2.loc[3] = new_row\n",
+    "\n",
+    "display(new_row)\n",
+    "display(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    4\n",
+       "b    7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_row = pd.Series({'a': 4, 'b': 7})\n",
+    "new_row"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## Removing Rows\n",
+    "\n",
     "Removing a row can be done the same as removing columns using `drop()`.\n",
     "\n",
     "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.  \n",
@@ -1469,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1767,6 +2258,8 @@
     "\n",
     "# Create filter\n",
     "filt = df[\"last\"].str.lower() == \"doe\"\n",
+    "\n",
+    "# Drop\n",
     "df.drop(df[filt].index, inplace=True)\n",
     "display(df)"
    ]
