Improve grammar and clarify explanation

--- a/pandas_02.ipynb
+++ b/pandas_02.ipynb
@@ -138,7 +138,8 @@
    "source": [
     "---\n",
     "## Selecting rows and columns in a dataframe\n",
-    "Selecting rows and columns are commonly done by using the `loc()` or `iloc()` DataFrame methods.\n",
+    "\n",
+    "Selecting rows and columns is commonly done by using indexing (bracket method) or by using the `loc()` or `iloc()` DataFrame methods.\n",
     "\n",
     "---\n",
     "\n",
