Add link to date formatting

--- a/pandas_10.ipynb
+++ b/pandas_10.ipynb
@@ -203,6 +203,8 @@
     "\n",
     "The data type of the \"Date\" column is actually an object, not a proper `datetime` type, which is pandas' data type for working with dates. To convert this into a datetime object, we can use the `to_datetime()` function and specify the format the date is in, similar to Python's `strptime()` method.\n",
     "\n",
+    "If no format is provided, `.to_datetime()` will try to parse the dates automatically. To learn more about date formatting: [Python docs](https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior)\n",
+    "\n",
     "---"
    ]
   },
