--- a/pandas_01a.ipynb
+++ b/pandas_01a.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,13 +178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.2381735 , -1.52091083,  1.89039075, -0.25387356, -2.347492  ])"
+       "array([ 0.2347969 ,  0.6169048 ,  0.57186328, -0.84546728, -0.39058731])"
       ]
      },
      "metadata": {},
@@ -200,11 +200,11 @@
     {
      "data": {
       "text/plain": [
-       "4    0.238174\n",
-       "3   -1.520911\n",
-       "2    1.890391\n",
-       "1   -0.253874\n",
-       "0   -2.347492\n",
+       "4    0.234797\n",
+       "3    0.616905\n",
+       "2    0.571863\n",
+       "1   -0.845467\n",
+       "0   -0.390587\n",
        "dtype: float64"
       ]
      },
@@ -214,11 +214,11 @@
     {
      "data": {
       "text/plain": [
-       "0    0.238174\n",
-       "1   -1.520911\n",
-       "2    1.890391\n",
-       "3   -0.253874\n",
-       "4   -2.347492\n",
+       "0    0.234797\n",
+       "1    0.616905\n",
+       "2    0.571863\n",
+       "3   -0.845467\n",
+       "4   -0.390587\n",
        "dtype: float64"
       ]
      },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': a    1.0\n",
+       " b    2.0\n",
+       " c    3.0\n",
+       " dtype: float64,\n",
+       " 'two': a      one\n",
+       " b      two\n",
+       " c    three\n",
+       " dtype: object}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>one</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>two</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>three</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one    two\n",
+       "a  1.0    one\n",
+       "b  2.0    two\n",
+       "c  3.0  three"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d1 = {\n",
+    "    \"one\": pd.Series([1.0, 2.0, 3.0], index=[\"a\", \"b\", \"c\"]),\n",
+    "    \"two\": pd.Series([\"one\", \"two\", \"three\"], index=[\"a\", \"b\", \"c\"]),\n",
+    "}\n",
+    "\n",
+    "display(d1)\n",
+    "printhr()\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df1 = pd.DataFrame(d1)\n",
+    "display(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,6 +661,7 @@
    ],
    "source": [
     "# Create a dict containing Series\n",
+    "# With different dimensions. (Length 3 vs Length 4)\n",
     "d = {\n",
     "    \"one\": pd.Series([1.0, 2.0, 3.0], index=[\"a\", \"b\", \"c\"]),\n",
     "    \"two\": pd.Series([\"one\", \"two\", \"three\", \"four\"], index=[\"a\", \"b\", \"c\", \"d\"]),\n",
@@ -584,7 +683,7 @@
     "# Notice how \"three\" is a NaN column. This is because\n",
     "# the data (d) does not have a column \"three\"\n",
     "df = pd.DataFrame(d, index=[\"d\", \"a\", \"b\", \"c\"], columns=[\"one\", \"three\"])\n",
-    "display(df)"
+    "display(df)\n"
    ]
   },
   {
@@ -602,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
